--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node app.js",
 		"dev": "nodemon app.js",
-		"tsc": "tsc app -w",
+		"tsc": "tsc -w",
 		"cssdev": "npx tailwindcss -i ./views/styles.css -o ./public/assets/styles.css --watch",
 		"cssbuild": "npx tailwindcss ./views/styles.css -o ./public/assets/styles.css --minify"
 	},
@@ -17,11 +17,16 @@
 		"dotenv": "^16.0.1",
 		"ejs": "^3.1.8",
 		"express": "^4.18.1",
+		"jsdom": "^20.0.0",
 		"lodash": "^4.17.21",
-		"mongodb": "^4.8.1"
+		"mongodb": "^4.8.1",
+		"mongoose": "^6.5.4",
+		"request": "^2.88.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.2",
+		"@types/body-parser": "^1.19.2",
+		"@types/express": "^4.17.13",
 		"tailwindcss": "^3.1.7"
 	}
 }
