--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
 {
-	"name": "linkshortener",
-	"version": "1.0.0",
-	"description": "",
-	"main": "app.js",
-	"scripts": {
-		"start": "node app.js",
-		"dev": "nodemon app.js",
-		"tsc": "tsc -w",
-		"cssdev": "npx tailwindcss -i ./views/styles.css -o ./public/assets/styles.css --watch",
-		"cssbuild": "npx tailwindcss ./views/styles.css -o ./public/assets/styles.css --minify"
-	},
-	"author": "ZedAshkan",
-	"license": "ISC",
-	"dependencies": {
-		"body-parser": "^1.20.0",
-		"dotenv": "^16.0.1",
-		"ejs": "^3.1.8",
-		"express": "^4.18.1",
-		"jsdom": "^20.0.0",
-		"lodash": "^4.17.21",
-		"mongodb": "^4.8.1",
-		"mongoose": "^6.5.4",
-		"request": "^2.88.2"
-	},
-	"devDependencies": {
-		"@tailwindcss/forms": "^0.5.2",
-		"@types/body-parser": "^1.19.2",
-		"@types/express": "^4.17.13",
-		"tailwindcss": "^3.1.7"
-	}
+  "name": "linkshortener",
+  "version": "1.0.0",
+  "description": "",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
+  "scripts": {
+    "start": "npm run build && node dist/index.js",
+    "dev:step1": "tsc -w",
+    "dev:step2": "tscp -w",
+    "dev:step3": "nodemon",
+    "dev:step4": "npx tailwindcss -i src/views/styles.css -o dist/public/assets/styles.css --watch",
+    "build": "tsc && tscp && npm run cssBuild",
+    "cssBuild": "npx tailwindcss -i src/views/styles.css -o dist/public/assets/styles.css --minify"
+  },
+  "author": "ZedAshkan",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.15",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "eslint": "^8.23.0",
+    "prettier": "2.7.1",
+    "tailwindcss": "^3.1.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
+    "typescript-cp": "^0.1.6"
+  }
 }
