--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "dev:step1": "tsc -w",
     "dev:step2": "tscp -w",
     "dev:step3": "nodemon",
-    "dev:step4": "npx tailwindcss -i src/views/styles.css -o dist/public/assets/styles.css --watch",
+    "dev:step4": "npx tailwindcss -i src/views/assets/styles.css -o dist/public/assets/styles.css --watch",
     "build": "tsc && tscp && npm run cssBuild",
-    "cssBuild": "npx tailwindcss -i src/views/styles.css -o dist/public/assets/styles.css --minify"
+    "cssBuild": "npx tailwindcss -i src/views/assets/styles.css -o dist/public/assets/styles.css --minify"
   },
   "author": "ZedAshkan",
   "license": "ISC",
@@ -23,7 +23,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^8.6.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
