--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "ipware": "^2.0.0",
     "mongoose": "^8.6.0"
   },
   "devDependencies": {
