--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.1.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
-    "typescript-cp": "^0.1.6"
+    "typescript-cp": "^0.1.6",
+    "nodemon": "^2.0.15"
   }
 }
